animation js init doesn't work

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 </div>
               </div>
             </div>
-            <div class="beekeperTitle">
+            <div class="beekeperTitle beekeepertitleShow">
               <a href=""><h2>Beekeeper</h2></a>
             </div>
           </div>
