animation scroll event beekeeper

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div>
           <div class="switch">
             <label class="toggle">
-              <input type="checkbox" />
+              <input type="checkbox" id="dark"/>
               <span class="slider"></span>
             </label>
           </div>
@@ -57,7 +57,7 @@
           </div>
           <!-- BEEKEEPER PART -->
           <div class="beekeeper">
-            <div class="beekeperLogo">
+            <div class="beekeperLogo" id="beekeperLogo">
               <div class="brun">
                 <img src="./assets/img/person01.png" alt="" />
                 <div class="blond">
@@ -65,7 +65,7 @@
                 </div>
               </div>
             </div>
-            <div class="beekeperTitle beekeepertitleShow">
+            <div class="beekeperTitle" id="beekeperTitle">
               <a href=""><h2>Beekeeper</h2></a>
             </div>
           </div>
