bee animation css

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <img class="bgDark" src="./assets/img/beeBGDark.png" alt="" />
         <div class="beeFly">
           <h2>Fly With Me</h2>
-          <img id="beeflyImg" src="./assets/img/beefly.png" alt="" />
+          <img id="beeflyImg" class="beeflyImg" src="./assets/img/beefly.png" alt="" />
         </div>
       </div>
       <!-- CONTACT PART -->
