--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
               <span class="slider"></span>
             </label>
           </div>
-          <div class="darkMode"><p>Dark Mode</p></div>
+          <div class="darkModeBTN" id="darkModeBTN"><p>Dark Mode</p></div>
         </div>
         <ul class="navigation">
           <li class="navLink one"><a href="index.html">Home</a></li>
