--- a/index.html
+++ b/index.html
@@ -102,27 +102,27 @@
       </div>
       <!-- CONTACT PART -->
       <div class="contact" id="contact">
-        <form action="">
+        <form>
           <div class="name">
             <div class="champs">
-              <label for="firstname">Firstname</label>
+              <label>Firstname</label>
               <input type="text" name="firstname" id="firstname" required />
             </div>
             <div class="champs">
-              <label for="lastname">Lastname</label>
+              <label>Lastname</label>
               <input type="text" name="lastname" id="lastname" required />
             </div>
           </div>
           <div class="champs">
-            <label for="username">Username</label>
+            <label>Username</label>
             <input type="text" name="username" id="username" required />
           </div>
           <div class="champs">
-            <label for="email">Email</label>
+            <label>Email</label>
             <input type="text" name="email" id="email" required />
           </div>
           <div class="champs">
-            <label for="phone">Topics</label>
+            <label>Topics</label>
             <input type="text" name="topics" id="topics" required />
           </div>
           <div class="submit">
