new logo and image, multi beekeeper choice

--- a/index.html
+++ b/index.html
@@ -49,10 +49,7 @@
             <h1>Bee Happy</h1>
             <img src="./assets/img/beeTitle.png" alt="" class="beeTitle" />
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis
-              dolor placeat praesentium rem natus id reiciendis possimus autem
-              asperiores corrupti iusto provident repellendus tempora, debitis
-              iste beatae deleniti repellat suscipit.
+              Cotton candy sweet I love cake croissant. Soufflé gummies jujubes shortbread topping candy canes. Danish cotton candy tootsie roll cotton candy lollipop shortbread apple pie I love jelly beans. Cake jujubes cookie cupcake topping. Chocolate bar candy canes macaroon I love jelly-o oat cake jelly-o cotton candy. Tart wafer caramels sweet roll tiramisu.
             </p>
           </div>
           <!-- BEEKEEPER PART -->
